--- a/geonode_mapstore_client/templates/geonode-mapstore-client/_geonode_config.html
+++ b/geonode_mapstore_client/templates/geonode-mapstore-client/_geonode_config.html
@@ -42,6 +42,7 @@
         const defaultMapCenterY = geoNodeSettings.DEFAULT_MAP_CENTER_Y || 0;
         const defaultMapZoom = geoNodeSettings.DEFAULT_MAP_ZOOM || 0;
         const defaultTileSize = geoNodeSettings.DEFAULT_TILE_SIZE || 512;
+        const defaultMaxUploadSize = geoNodeSettings.DEFAULT_MAX_UPLOAD_SIZE || 104857600;
         const defaultLayerFormat = geoNodeSettings.DEFAULT_LAYER_FORMAT || 'image/png';
         const catalogueServices = geoNodeSettings.CATALOGUE_SERVICES || {};
         const catalogueSelectedService = geoNodeSettings.CATALOGUE_SELECTED_SERVICE || '';
@@ -88,7 +89,9 @@
                     defaultLayerFormat: defaultLayerFormat,
                     timeEnabled: timeEnabled,
                     allowedDocumentTypes: allowedDocumentTypes,
-                    isMobile: isMobile
+                    isMobile: isMobile,
+                    dataset_upload_size: defaultMaxUploadSize,
+                    document_upload_size: defaultMaxUploadSize,
                 },
                 geoNodeConfiguration: {
                     cardsMenu: {
