--- a/geonode_mapstore_client/templates/geonode-mapstore-client/_geonode_config.html
+++ b/geonode_mapstore_client/templates/geonode-mapstore-client/_geonode_config.html
@@ -91,8 +91,8 @@
                     timeEnabled: timeEnabled,
                     allowedDocumentTypes: allowedDocumentTypes,
                     isMobile: isMobile,
-                    dataset_upload_size: datasetMaxUploadSize,
-                    document_upload_size: documentMaxUploadSize,
+                    datasetMaxUploadSize: datasetMaxUploadSize,
+                    documentMaxUploadSize: documentMaxUploadSize,
                 },
                 geoNodeConfiguration: {
                     cardsMenu: {
